# ov-dgxc-portal-sample

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh
.agents/skills/check-nvcf-function/: SKILL.md
.agents/skills/check-streaming-app/: SKILL.md
.agents/skills/diagnose-streaming-issues/: SKILL.md
.agents/skills/publish-streaming-app/: SKILL.md
.agents/skills/remove-streaming-app/: SKILL.md
.agents/streaming-issue-docs/: OV-WEB-RTC-ERROR-CODES-FULL.md  OV-WEB-RTC-ERROR-CODES.md  README.md  STREAMING-REFERENCE.md
.agents/streaming-issue-docs/build-package/: docker-access-denied-ov-base.md  forgot-nvcf-streaming-layer.md  missing-livestream-extensions.md  missing-make.md  nvcf-kit-crashes-locally.md  package-container-dns-pip.md  platform-incompatible-extensions.md
.agents/streaming-issue-docs/nucleus-auth/: cannot-connect-nucleus-in-stream.md  env-needs-nucleus.md
.claude/commands/: check-nvcf-function.md  check-streaming-app.md  diagnose-streaming-issues.md  publish-streaming-app.md  remove-streaming-app.md
backend/: .gitignore  ATTRIBUTIONS.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  api_keys.py  auth.py  main.py  models.py  nvcf.py  settings.py
backend/app/mcp/: auth.py  oauth.py  server.py
backend/app/observability/: METRICS.md  __init__.py  metrics.py
backend/app/routers/: __init__.py  apps.py  deployment.py  pages.py  sessions.py  users.py
backend/app/tests/: conftest.py  test_api_keys.py
backend/app/tests/routers/: test_apps.py  test_pages.py  test_sessions.py  test_users.py
backend/migrations/models/: 0_20250808174831_init.py  1_20250808201505_media_server.py  2_20250923204541_update.py  3_20250923222501_update.py  5_20260320053423_add_session_duration.py  6_20260512000000_add_session_error.py  7_20260602233819_add_mcp_oauth.py
backend/scripts/: generate_sessions.py  metrics.py
helm/web-streaming-example/: Chart.yaml  install.sh  uninstall.sh  upgrade.sh  values.yaml
scripts/: create_function.sh  create_function_with_caches.sh
web/: .dockerignore  .gitignore  ATTRIBUTIONS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
web/public/css/: fonts.css
web/src/: main.tsx  nucleus.ts  router.tsx  util.ts  vite-env.d.ts
(+95 files in other folders)
