[tool.poetry]
name = "streaming-web-backend"
version = "0.1.0"
description = ""
authors = ["NVIDIA"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.3"
uvicorn = "^0.30.1"
tortoise-orm = "^0.21.3"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
pytest-httpx = "^0.30.0"
websockets = "^13.0"
cachetools = "^5.5.0"
asyncache = "^0.3.1"
pytest-mock = "^3.14.0"
cryptography = "^43.0.0"
starlette = "0.40.0"
setuptools = "^75.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
freezegun = "^1.5.1"
asgi-lifespan = "^2.1.0"
respx = "^0.22.0"

[tool.poetry.scripts]
api = "app.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests/**/*.py"]

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
